[metadata]
name = metareview
version = 0.1.0
author = Zane Bitter
author_email = zbitter@redhat.com
description = A CLI tool to help review Gerrit reviewers
url = https://github.com/zaneb/metareview
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: POSIX
    Environment :: Console
